.k8s/hasura/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura-gameofblocks-${CI_ENVIRONMENT_SLUG}
  labels:
    app: hasura-gameofblocks
    ref: hasura-${CI_ENVIRONMENT_SLUG}
    track: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hasura-gameofblocks
      ref: hasura-${CI_ENVIRONMENT_SLUG}
  template:
    metadata:
      labels:
        app: hasura-gameofblocks
        ref: hasura-${CI_ENVIRONMENT_SLUG}
        track: stable
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: app
          image: ${CI_REGISTRY_IMAGE}/hasura:${CI_COMMIT_SHA}
          imagePullPolicy: Always
          ports:
            - name: http-metrics
              protocol: TCP
              containerPort: 8080
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 3
          #   timeoutSeconds: 2
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 3
          #   timeoutSeconds: 2
